Fix wrong colours

--- a/frontend/static/themes/monochrome.css
+++ b/frontend/static/themes/monochrome.css
@@ -1,12 +1,34 @@
 :root {
-    --main-color: #ffffff;
-    --caret-color: #999999;
-    --sub-color: #474747;
-    --sub-alt-color: #4f4f4f;
-    --bg-color: #949494;
-    --text-color: #292929;
-    --error-color: #909090;
-    --error-extra-color: #3e3e3e;
-    --colorful-error-color: #7b7b7b;
-    --colorful-error-extra-color: #ebebeb;
+  --main-color: #000000;
+  --caret-color: #9f9f9f;
+  --sub-color: #838383;
+  --sub-alt-color: #dbdbdb;
+  --bg-color: #ffffff;
+  --text-color: #000000;
+  --error-color: #c8c8c8;
+  --error-extra-color: #9c9c9c;
+  --colorful-error-color: #313131;
+  --colorful-error-extra-color: #3d3d3d;
+}
+
+@keyframes error {
+  0% {
+    color: #000000;
+  }
+  25% {
+    color: #313131;
+  }
+  50% {
+    color: #838383;
+  }
+  75% {
+    color: #c8c8c8;
+  }
+  100% {
+    color: #ffffff;
+  }
+}
+
+#words:not(.flipped) .word letter.incorrect {
+  animation: error 2s alternate infinite;
 }
